--- a/style.scss
+++ b/style.scss
@@ -18,20 +18,17 @@ body {
     height: auto;
     margin: 0px auto;
     border: 1px solid red;
+    position: relative;
 }
 
-.one {
-    min-width: 1438px;
-    height: 901.84px;
-    background: url(/images/img/fon.jpg) 0 0/cover no-repeat;
-    margin: 0px auto;
-    &__header {
-        width: auto;
-        height: 107.25px;
-        display: flex;
-        align-items: center;
-    }
-    &__header-menu {    
+.header {
+    width: 100%;
+    height: 107.25px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 0px;
+    &__menu {    
         width: 100%;
         ul {
             width: auto;
@@ -45,5 +42,144 @@ body {
             line-height: 25px;
             color: #FFFFFF;
         }
+    }
+}
+
+
+.one {
+    width: 1438px;
+    height: 901.84px;
+    background: url(/images/img/fon.jpg) 0 0/cover no-repeat;
+    margin: 0px auto;
+    padding-top: 107.25px;
+    &__consultation {
+        display: flex;
+        justify-content: end;
+    }
+    &__phone {
+        display: flex;
+        align-items: center;
+        p {
+            width: 168px;
+            height: 25px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 25px;
+            color: #FFFFFF;
+            margin-left: 10px;
+        }
+    }
+    button {
+        width: 282px;
+        height: 58.5px;
+        border: 1px solid #FFFFFF;
+        background: none;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 25px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+    &__title {
+        display: flex;
+        justify-content: space-between;
+        width: 711.87px;
+        height: 148px;
+        margin: 0px auto;
+        h2 {
+            font-family: 'Oswald';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 100px;
+            line-height: 148px;
+            color: #FFFFFF;
+        }
+    }
+    &__info {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 80px;
+        h1 {
+            width: 521px;
+            height: 222px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 54px;
+            line-height: 74px;
+            color: #FFFFFF;
+        }
+    }
+    &__info-right-block {
+        padding: 18.75px 13.27px 11.25px 13.17px;
+        width: 380px;
+        height: 150px;
+        font-family: 'Open Sans';
+        background: rgba(217, 217, 217, 0.102);
+        box-shadow: inset 19.1667px -19.1667px 19.1667px rgba(165, 165, 165, 0.102), inset -19.1667px 19.1667px 19.1667px rgba(255, 255, 255, 0.102);
+        backdrop-filter: blur(15.7167px);
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 30px;
+        color: #FFFFFF;
+        position: relative;
+    }
+    .up {
+        margin-bottom: 66px;
+    }
+    &__info-money-key {
+        width: 115px;
+        height: 109px;
+        position: absolute;
+        right: -30px;
+        top: -50px;
+    }
+    &__futer-box {
+        margin-top: 67px;
+        display: flex;
+        justify-content: center;
+    }
+    &__futer-column {
+        width: 314px;
+        height: 70px;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 38px;
+        color: #FFFFFF;
+        display: flex;
+        align-items: center;
+        span {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 50px;
+            line-height: 68px;
+            color: #267842;
+        }
+    }
+    .right {
+        width: 217px;
+        height: 70px;
+        justify-content: end;
+    }
+    .center {
+        width: 299px;
+        height: 70px;
+        justify-content: center;
+    }
+    &__futer-border {
+        width: 2px;
+        height: 50px;
+        background-color: #FFFFFF;
+        margin: 10px 29px;
     }
 }
