--- a/style.scss
+++ b/style.scss
@@ -8,10 +8,12 @@ ul {
     list-style-type: none;
 }
 
+
 body {
-    min-width: 1438px;
+    width: 1438px;
     
 }
+
 
 .container {
     width: 1181px;
@@ -21,8 +23,9 @@ body {
     position: relative;
 }
 
+
 .header {
-    width: 100%;
+    width: 1438px;
     height: 107.25px;
     display: flex;
     align-items: center;
@@ -181,5 +184,652 @@ body {
         height: 50px;
         background-color: #FFFFFF;
         margin: 10px 29px;
+    }
+}
+
+
+.why-me {
+    &__box-why-me {
+        width: 734px;
+        height: 191px;
+        margin: 120px auto 90.5px;
+        position: relative;
+        h2 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 140px;
+            line-height: 191px;
+        }
+        h3 {
+            width: 367px;
+            height: 95px;
+            position: absolute;
+            top: 102.5px;
+            left: -55px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+        }
+    }
+    &__linea {
+        width: 261.03px;
+        height: 2px;
+        border: 2px solid #267842;
+        position: absolute;
+        top: 270px;
+        left: -130.25px;
+    }
+    &__benefits {
+        width: 1180px;
+        height: 280.59px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__benefits-column {
+        width: 380px;
+        height: 254px;
+        border: 1px solid #267842;
+        padding: 46px 21px 15px 23px;
+        position: relative;
+        h3 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 28px;
+            line-height: 38px;
+            color: #267842;
+        }
+        p {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 27px;
+            color: #1B1919;
+        }
+        span {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 27px;
+            color: #267842;
+        }
+
+    }
+    &__benefits-column-icon {
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        position: absolute;
+        top: -20px;
+        left: 43.65px;
+        background-color: #ffffff;
+
+    }
+}
+
+
+.services-and-prices {
+    &__box-services-and-prices {
+        position: relative;
+        width: 958px;
+        height: 191px;
+        margin: 120px 20px 66.5px auto;
+        border: 1px solid red;
+        h2 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 140px;
+            line-height: 191px;
+            text-align: right;
+        }
+        h3 {
+            width: 489px;
+            height: 95px;
+            position: absolute;
+            top: 102.5px;
+            left: 0px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+        }
+    }
+    &__linea {
+        width: 261.03px;
+        height: 2px;
+        border: 2px solid #267842;
+        position: absolute;
+        top: 270px;
+        left: -130.25px;
+    }
+    &__bulb {
+        width: 190px;
+        height: 667px;
+        position: absolute;
+        top: 0px;
+        left: -130.25px;
+        opacity: 0.1;
+    }
+    &__box {
+        display: flex;
+        width: 1181px;
+        justify-content: space-between;
+        margin-bottom: 45px;
+    }
+    &__box-column {
+        width: 580px;
+    }
+    &__box-column-block {
+        height: 112px;
+        text-align: center;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 38px;
+        color: #1B1919;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 15px;
+        background: linear-gradient(91.81deg, rgba(223, 235, 227, 0.3) -4.27%, rgba(223, 235, 227, 0.1) 91.14%);
+        h2 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 49px;
+            text-align: center;
+            color: #FFFFFF;
+            width: 420px;
+            text-align: center;
+            margin: 0px auto;
+        }
+        p {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 28px;
+            line-height: 38px;
+            text-align: center;
+            color: #FFFFFF;
+        }
+    }
+    .title {
+        background: rgba(38, 120, 66, 0.5);
+        margin-bottom: 0px;
+    }
+    .right {
+        background: rgba(38, 120, 66, 0.15);
+        color: #267842;
+    }
+    &__term {
+        height: 49px;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 49px;
+        color: #1B1919;
+        margin-bottom: 60px;
+        span {
+            color: #267842;
+            font-size: 28px;
+        }
+    }
+    &__button {
+        text-align: center;
+        button {
+            background: #267842;
+            width: 379.25px;
+            height: 76.17px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 28px;
+            line-height: 38px;
+            text-transform: uppercase;
+            color: #FFFFFF;
+        }
+    }
+}
+
+
+.objects {
+    &__title-box {
+        display: flex;
+        align-items: center;
+        h3 {
+            width: 681px;
+            height: 95px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+        }
+    }
+    &__linea {
+        width: 116.48px;
+        height: 0px;
+        border: 2px solid #267842;
+        margin-right: 20.3px;
+    }
+    &__project {
+        width: 641px;
+        height: 38px;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 38px;
+        color: #267842;
+        margin-left: 137.37px;
+        margin-bottom: 60px;
+    }
+    &__project-list {
+        width: 1181.25px;
+        height: 530.08px;
+        background: rgba(38, 120, 66, 0.8);
+        display: flex;
+        ul {
+            width: 50%;
+            list-style-type: disc;
+            padding: 22.08px 34px 48px 57.25px;
+            li {
+                width: 431px;
+                height: 92px;
+                font-family: 'Open Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 28px;
+                line-height: 38px;
+                color: #FFFFFF;
+                margin-bottom: 10px;
+                border: 1px solid red;
+            }
+        }
+    }
+}
+
+
+.order {
+    &__linea {
+        width: 261.03px;
+        height: 2px;
+        border: 2px solid #267842;
+        position: absolute;
+        top: 270px;
+        left: -130.25px;
+    }
+    &__box-order {
+        width: 855.73px;
+        height: 191px;
+        margin: 120px 0px 78px 322.52px;
+        position: relative;
+        border: 1px solid red;
+        h2 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 140px;
+            line-height: 191px;
+        }
+        h3 {
+            width: 686px;
+            height: 95px;
+            position: absolute;
+            top: 102.5px;
+            left: -55px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+        }
+    }
+    &__instruction {
+        width: 1017.97px;
+        height: 1104.9px;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin: 0px auto;
+        border: 1px solid red;
+    }
+    &__step {
+        width: 278.37px;
+        height: 265.83px;
+        position: relative;
+        img {
+            position: absolute;
+            top: 0px;
+            right: 50.24px;
+        }
+        p {
+            margin-top: 40px;
+            text-align: center;
+        }
+    }
+    &__step-number {
+        position: absolute;
+        top: 0px;
+        right: 50.37px;
+        width: 55px;
+        height: 55px;
+        border-radius: 50%;
+        text-align: center;
+        background: #267842;
+        padding-top: 7px;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 28px;
+        line-height: 38px;
+        text-align: center;
+        color: #FFFFFF;
+        z-index: 2;
+    }
+    &__step-circle {
+        margin: 0px auto;
+        width: 158px;
+        height: 158px;
+        border-radius: 50%;
+        background: #267842;
+        opacity: 0.3;
+        filter : blur(13.5px);
+    }
+    &__button {
+        text-align: center;
+        button {
+            background: #267842;
+            width: 379.25px;
+            height: 76.17px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 28px;
+            line-height: 38px;
+            text-transform: uppercase;
+            color: #FFFFFF;
+        }
+    }
+}
+
+
+.order-works {
+    &__title-box {
+        margin-top: 302.5px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        h3 {
+            width: 804.23px;
+            height: 190px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+            border: 1px solid blue;
+            margin-bottom: 60px;
+            span {
+                color: #267842;
+            }
+        }
+    }
+    &__linea {
+        width: 261.03px;
+        height: 0px;
+        border: 2px solid #267842;
+        margin-right: 46.22px;
+    }
+    &__block-step {
+        width: 1181px;
+        height: 162px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__step {
+        display: flex;
+        align-items: center;
+        p {
+            width: 268px;
+            padding-left: 20px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 27px;
+            color: #1B1919;
+        }
+    }
+    &__step-number {
+        width: 80px;
+        height: 107px;
+        border: 1px solid #267842;
+        text-align: center;
+        padding-top: 12px;
+        font-family: 'Open Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 54px;
+        line-height: 74px;
+        color: #1B1919;
+        position: relative;
+    }
+    &__step-null {
+        width: 3px;
+        height: 35px;
+        background-color: #FFFFFF;
+        position: absolute;
+        top: 35px;
+        right: -2px;
+    }
+    &__button {
+        margin-top: 60px;
+        text-align: center;
+        button {
+            background: #267842;
+            width: 379.25px;
+            height: 76.17px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 28px;
+            line-height: 38px;
+            text-transform: uppercase;
+            color: #FFFFFF;
+        }
+    }
+}
+
+
+.examples {
+    &__linea {
+        width: 261.03px;
+        height: 2px;
+        border: 2px solid #267842;
+        position: absolute;
+        top: 270px;
+        left: -130.25px;
+    }
+    &__box-order {
+        width: 855.73px;
+        height: 191px;
+        margin: 120px 0px 78px 322.52px;
+        position: relative;
+        border: 1px solid red;
+        h2 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 140px;
+            line-height: 191px;
+        }
+        h3 {
+            width: 686px;
+            height: 95px;
+            position: absolute;
+            top: 102.5px;
+            left: -55px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+        }
+    }
+    &__box {
+        width: 1181px;
+        display: flex;
+        justify-content: space-around;
+    }
+    &__box-container {
+        width: 580px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+
+.reviews {
+    &__linea {
+        width: 261.03px;
+        height: 2px;
+        border: 2px solid #267842;
+        position: absolute;
+        top: 270px;
+        left: -130.25px;
+    }
+    &__box-order {
+        width: 855.73px;
+        height: 191px;
+        margin: 120px 0px 78px 322.52px;
+        position: relative;
+        border: 1px solid red;
+        h2 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 140px;
+            line-height: 191px;
+        }
+        h3 {
+            width: 686px;
+            height: 95px;
+            position: absolute;
+            top: 102.5px;
+            left: -55px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+        }
+    }
+    &__buttons {
+        display: flex;
+        justify-content: end;
+        button {
+            width: 80px;
+            height: 78px;
+            margin-left: 20px;
+        }
+    }
+    &__box-reviews {
+        width: 1181px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__column {
+        width: 580px;
+        height: 382px;
+        padding: 56.5px 38.41px 23.5px;
+        background: rgba(38, 120, 66, 0.8);
+        p {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 27px;
+            color: #FFFFFF;
+            span {
+                font-weight: 700;
+                font-size: 18px;
+                line-height: 25px;
+            }
+        }
+    }
+    &__column-text {
+        height: 269px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    &__column-star-box {
+        height: 56.5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .star {
+        width: 20px;
+        height: 20px;
+    }
+}
+
+
+.about {
+    &__linea {
+        width: 261.03px;
+        height: 2px;
+        border: 2px solid #267842;
+        position: absolute;
+        top: 270px;
+        left: -130.25px;
+    }
+    &__box-order {
+        width: 855.73px;
+        height: 191px;
+        margin: 120px 0px 78px 322.52px;
+        position: relative;
+        border: 1px solid red;
+        h2 {
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 140px;
+            line-height: 191px;
+        }
+        h3 {
+            width: 686px;
+            height: 95px;
+            position: absolute;
+            top: 102.5px;
+            left: -55px;
+            font-family: 'Open Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 70px;
+            line-height: 95px;
+            color: #1B1919;
+        }
     }
 }
